--- a/index.html
+++ b/index.html
@@ -590,8 +590,16 @@
               <li><a href="https://www.linkedin.com/in/chen-lu/"><i class="fa fa-linkedin"></i></a></li>
               <li><a href="https://github.com/lvchen727"><i class="fa fa-github"></i></a></li>
             </ul>
-            <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=QK8GSC3fHRVXYYwD4oadrZfgA5vXsPbW3XQnk6fD6Cg&cl=ffffff&w=a"></script>
+            <div id="clustrmaps-widget"></div>
+            <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=22c275&w=a&t=tt&d=QK8GSC3fHRVXYYwD4oadrZfgA5vXsPbW3XQnk6fD6Cg&co=2d78ad&ct=ffffff&cmo=fff853&cmn=ff5353'></script>
+            <!-- <script type="text/javascript">var _clustrmaps = {'url' : 'http://lvchen727.github.io/', 'user' : 1168849, 'server' : '3', 'id' : 'clustrmaps-widget', 'version' : 1, 'date' : '2015-04-30', 'lang' : 'en', 'corners' : 'square' };(function (){ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = 'http://www2.clustrmaps.com/counter/map.js'; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);})();</script><noscript><a href="http://clustrmaps.com/site/19ro1"><img src="//clustrmaps.com/map_v2.png?cl=22c275&w=a&t=tt&d=QK8GSC3fHRVXYYwD4oadrZfgA5vXsPbW3XQnk6fD6Cg&co=2d78ad&ct=ffffff" alt="Locations of visitors to this page" /></a></noscript> -->
 
+            <div id="footer-text">
+              <span style="font-style: italic;">Last Updated:</span>
+              <script language="JavaScript"> <!--
+                document.write(document.lastModified);
+              </script>
+            </div>
 
             <ul class="copyright">
                <li>&copy; Copyright 2017 Chen Lu</li>
@@ -607,13 +615,9 @@
 
 <div id="footer">
   <div id="footer-text">
-    <span style="font-style: italic;">Last Updated:</span>
-    <script language="JavaScript"> <!--
-      document.write(document.lastModified);
-    </script>
 
     <div id="clustrmaps-widget"></div>
-    <script type="text/javascript">var _clustrmaps = {'url' : 'http://jasontengwang.github.io/', 'user' : 1168849, 'server' : '3', 'id' : 'clustrmaps-widget', 'version' : 1, 'date' : '2015-04-30', 'lang' : 'en', 'corners' : 'square' };(function (){ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = 'http://www2.clustrmaps.com/counter/map.js'; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);})();</script><noscript><a href="http://www2.clustrmaps.com/user/e0111d5d1"><img src="http://www3.clustrmaps.com/stats/maps-no_clusters/jasontengwang.github.io--thumb.jpg" alt="Locations of visitors to this page" /></a></noscript>
+    <script type="text/javascript">var _clustrmaps = {'url' : 'http://lvchen727.github.io/', 'user' : 1168849, 'server' : '3', 'id' : 'clustrmaps-widget', 'version' : 1, 'date' : '2015-04-30', 'lang' : 'en', 'corners' : 'square' };(function (){ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = 'http://www2.clustrmaps.com/counter/map.js'; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);})();</script><noscript><a href="http://www2.clustrmaps.com/user/e0111d5d1"><img src="http://www3.clustrmaps.com/stats/maps-no_clusters/jasontengwang.github.io--thumb.jpg" alt="Locations of visitors to this page" /></a></noscript>
   </div>
 </div>
 
