--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <li><a class="smoothscroll" href="#about">About</a></li>
             <li><a class="smoothscroll" href="#portfolio">Projects</a></li>
 	         <li><a class="smoothscroll" href="#resume">Resume</a></li>
-            <li><a class="smoothscroll" href="#testimonials">Publications</a></li>
+            <!-- <li><a class="smoothscroll" href="#testimonials">Publications</a></li> -->
             <li><a class="smoothscroll" href="#contact">Contact</a></li>
          </ul> <!-- end #nav -->
 
@@ -99,7 +99,7 @@
             In my spare time, I love to learn new things through reading and online courses. I taught myself SOA probablity,
             financial mathematics, and passed CFA level 1 exam. I also enjoyed the courses of coursera Genomic Data Science
             Specialization and udacity machine learning nanodegree.
-            Genarlly, I love Math, Computer Science, Life Science and Philosophy!
+            Generally, I love Math, Computer Science, Life Science and Philosophy!
             My goal is to be a lifelong learner, and to explore the universe as much as I could!
             </p>
 
