--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
        		<div class="col-md-7 contact-map-right">
        		<div id="map"></div>
        			<!-- Map-JavaScript -->
-       			<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
+       			<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDK-rpVTQpLiNnUMwxRsmOyHuHJhewKXuw&callback=initMap"></script>
        			<script type="text/javascript">
        				google.maps.event.addDomListener(window, 'load', init);
        				function init() {
