--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
          <div class="agile_banner_info">
             <div id="typed-strings" class="agileits_w3layouts_strings">
                 <p>Hello! I am <i>Chen Lu.</i></p>
-                <p>I am <i>an AI/Machine Learning Enthusiast.</i></p>
-                <p>I am <i>a Problem Solver.</i></p>
+                <p><i>An AI/ML Enthusiast.</i></p>
+                <p>Love <i>solving challenging problems.</i></p>
                 <p>Will be <i>a Lifelong Learner!</i></p>
               </div>
             <span id="typed" style="white-space:pre;"></span>
