add web project 1

--- a/index.html
+++ b/index.html
@@ -393,6 +393,33 @@
              </div><!-- modal-06 End -->
 
 
+             <div id="modal-07" class="popup-modal mfp-hide">
+
+              <img class="scale-with-grid" src="images/portfolio/fileShareWeb.png" alt="" />
+
+              <div class="description-box">
+                <h4>A File Sharing Website</h4>
+                <p> A simple file sharing site that supports uploading, viewing, and deleting files associated with various users.</p>
+                <ul>
+                  <li type = "square">On the main login page, you can create a new user and then successfully login using this new username.</li>
+                  <li type = "square">Already existing users have the option to upload, view files as well as delete their username and all files associated with their username. </li>
+                </ul>
+                <span class="categories"><i class="fa fa-tag"></i>Web Development, PHP, HTML, CSS</span>
+              </div>
+
+                <div class="link-box">
+                   <a href="http://ec2-54-152-150-48.compute-1.amazonaws.com/~ChenLu/filesharingsite/index.html">Details</a>
+                 <a class="popup-modal-dismiss">Close</a>
+                </div>
+
+            </div><!-- modal-06 End -->
+
+
+
+
+
+
+
       </div> <!-- row End -->
 
 
