add web project 1

--- a/index.html
+++ b/index.html
@@ -246,6 +246,24 @@
               </div> <!-- item end -->
 
 
+              <div class="columns portfolio-item">
+                 <div class="item-wrap">
+
+                    <a href="#modal-07" title="">
+                       <img alt="" src="images/portfolio/shareFileWeb.png">
+                       <div class="overlay">
+                          <div class="portfolio-item-meta">
+                         <h5>Simple File Sharing Site</h5>
+                             <p>Web Development, PHP, HTML, CSS</p>
+                      </div>
+                       </div>
+                       <div class="link-icon"><i class="icon-plus"></i></div>
+                    </a>
+
+                 </div>
+             </div> <!-- item end -->
+
+
               <!-- Modal Popup
               -------------------------------------------->
 
